small detail fixes, scroll to id no longer covered by fixed nav 🍾

--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -3,7 +3,7 @@
 }
 
 .about .wrapper {
-  padding: 5rem 0 3rem;
+  padding: 5rem 0 8rem;
   h2 {
     padding-bottom: 5rem;
   }
@@ -14,7 +14,6 @@
     display: flex;
     align-items: center;
     border-radius: 0.5rem;
-    font-size: 1.7rem;
     width: 30%;
     padding: 5rem 3rem;
     margin-right: 7rem;
@@ -60,6 +59,7 @@
   .listNumber {
     height: 100%;
     margin-right: 2rem;
+    // padding: 1rem 1.49rem;
   }
   p {
     margin: 0.8rem 0;
