--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -74,7 +74,8 @@ ol {
   }
 }
 
-.number:hover {
+.number:hover,
+.listNumber:hover {
   animation: jiggle 0.8s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
 }
