--- a/styles/sass/_toolkit.scss
+++ b/styles/sass/_toolkit.scss
@@ -1,5 +1,5 @@
 .toolkit {
-  padding: 5rem 0;
+  padding-bottom: 5rem;
   background: $lightGreen;
   h2 {
     padding-bottom: 8rem;
@@ -25,9 +25,6 @@
     align-items: center;
     margin: 2rem 2.9rem;
     width: 10rem;
-    i {
-      font-size: 8.5rem;
-    }
     p {
       width: 80%;
       text-align: center;
