--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -67,3 +67,14 @@ nav a {
 p {
   line-height: 2.8rem;
 }
+
+.listContainer {
+  font-size: 1.7rem;
+  a {
+    font-size: 2rem;
+  }
+}
+
+.iconsContainer i {
+  font-size: 8.5rem;
+}
